# vlcsync

./: .gitignore  DEVELOPMENT.md  LICENSE.md  README.md  bench_func.py  build_win.sh  cmd_utils.py  geometry_utils.py  idletools.py  ps_utils.py  py2exe.py  pyproject.toml  pytest.ini  utils.py  vlc_sync.py  vlc_util.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: awesome.md  install.md  vlc_setup.md
scripts/: start_discovery_plus_manual_vlcs.sh
tests/: bench_func.py  geometry_utils.py  helper_vid_samples.py  player_emulator.py  test_bench_copy_dicts.py  test_main.py  test_utils.py
tests/helpers/: geometry_utils.py  video_samples.py
tests/integration/: test_smoke.py
vlc_pilot/: bench_func.py  idletools.py  utils.py  vlc_sync.py  vlc_util.py
vlcsync/: app_config.py  bench_func.py  cli.py  cli_utils.py  cmd_utils.py  main.py  prepate_test.py  syncer.py  utils.py  vlc.py  vlc_conn.py  vlc_finder.py  vlc_models.py  vlc_socket.py  vlc_state.py  vlc_util.py
