[tool.poetry]
name = "vlcsync"
version = "0.1.3"
description = ""
authors = ["mrkeuz <mrkeuz@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "*"
psutil = "*"
cached-property = "*"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
profilehooks = "^1.12.0"

[tool.poetry.scripts]
vlcsync = 'vlcsync.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
