[tool.poetry]
name = "vlcsync"
version = "0.2.0"
description = "Utility for synchronize multiple instances of VLC. Supports seek, play and pause. "
authors = ["mrkeuz <mrkeuz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mrkeuz/vlcsync/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Utilities"
]

[tool.poetry.urls]
"Documentation" = "https://github.com/mrkeuz/vlcsync/"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "*"
psutil = "*"
cached-property = "*"
click = "^8.1.3"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
profilehooks = "^1.12.0"
pytest-benchmark = "^3.4.1"

[tool.poetry.scripts]
vlcsync = 'vlcsync.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
